# cifs-client

./: .envrc  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: check.yml  check_n_test.yml
specs/: ntlm.html
src/: cifs.rs  connection.rs  error.rs  lib.rs  netbios.rs  ntlm.rs  smb.rs  utils.rs  win.rs
src/ntlm/: auth.rs  buffer.rs  challenge.rs  error.rs  init.rs  packet.rs
src/smb/: common.rs  error.rs  info.rs  msg.rs  reply.rs  subcmd.rs  trans.rs  trans2.rs
src/smb/trans2/: collector.rs  msg.rs  reply.rs  subreply.rs
src/smb/trans2/subcmd/: findfirst2.rs  findnext2.rs
src/smb/trans2/subreply/: findfirst2.rs  findnext2.rs
