[package]
name = "cifs"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "1.3"
byteorder = "1.4"   # XXX either this or bytes will have to go
bytes = "1.1"
md4 = "0.10"
md-5 = "0.10"
hmac = "0.12"
hex-literal = "0.3"
chrono = "0.4"
rand = "0.8"
tokio = { version = "1.17", features = ["macros", "rt", "io-util", "net"] }
num_enum = "0.5"
