[package]
name = "cifs"
version = "0.1.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["io-util", "net"] }
bitflags = "1.3"
bytes = "1.1"
md4 = "0.10"
md-5 = "0.10"
hmac = "0.12"
hex-literal = "0.3"
chrono = "0.4"
rand = "0.8"
num_enum = "0.5"
lazy_static = "1.4"
regex = "1"
