[package]
name = "cifs-client"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "A minimal, Rust-native CIFS client implementation"
repository = "https://github.com/re-gmbh/cifs.git"
homepage = "https://github.com/re-gmbh/cifs"
readme = "README.md"
keywords = ["cifs"]

[dependencies]
tokio = { version = "1", features = ["io-util", "net"] }
bitflags = "1.3"
bytes = "1.1"
md4 = "0.10"
md-5 = "0.10"
hmac = "0.12"
des = "0.8"
hex-literal = "0.3"
chrono = "0.4"
rand = "0.8"
num_enum = "0.5"
lazy_static = "1.4"
regex = "1"
itertools = "0.10"
